Fix the width of the image column
The width of the thumbnail image is already set in code. We don’t want
the grid column containing the thumbnail to expand, because it creates
misalignment with the text in the description column.

--- a/app/assets/stylesheets/leaderboard.sass.scss
+++ b/app/assets/stylesheets/leaderboard.sass.scss
@@ -43,6 +43,7 @@
 
         .place {
           display: grid;
+          grid-template-columns: 90px 1fr;
           font-size: 0.8em;
           gap: 10px;
           margin: 0 0 10px 0;
